--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  @font-face {
+    font-family: 'girls';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url('/fonts/crafty-girls/regular.ttf') format('truetype');
+  }
+
+  @font-face {
+    font-family: 'open-sans';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url('/fonts/open-sans/regular.ttf') format('truetype');
+  }
+
+  @font-face {
+    font-family: 'open-sans';
+    font-style: light;
+    font-weight: 300;
+    font-display: swap;
+    src: url('/fonts/open-sans/light.ttf') format('truetype');
+  }
+}
